<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bota pra Rodar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="complete_name">Nome completo</string>
    <string name="add_user_title">Cadastrar pessoa</string>
    <string name="confirmar_devolucao">Confirmar devolução</string>
    <string name="quiz_title">Questionário</string>
    <string name="action_search">action_search</string>
    <string name="add_community_title">Adicionar comunidade</string>
    <string name="community_name_hint">Nome</string>
    <string name="community_description_hint">Descrição</string>
    <string name="community_address_hint">Endereço</string>
    <string name="community_org_name_hint">Nome do responsável</string>
    <string name="community_org_email_hint">Email do responsável</string>
    <string name="community_add_button">Adicionar</string>
    <string name="community_add_success_message">Comunidade adicionada com sucesso</string>
    <string name="community_add_confirm">Tudo certo!</string>
    <string name="community_confirm_title">Os dados estão corretos?</string>
    <string name="empties_fields_error">Preencha todos os campos</string>
    <string name="login_error">Falha no login</string>
    <string name="admin_registration_error">Falha ao criar usuário administrador</string>
    <string name="add_community">Adicionar comunidade</string>
    <string name="login_return_confirmation">Essa ação irá deslogar você. Clique OK para confirmar?</string>
    <string name="login_no_communities_allowed">Solicite o vínculo com alguma comunidade a Ameciclo</string>
    <string name="login_load_communities_error">Erro ao obter comunidades</string>
    <string name="login_retry_load_community">Tentar novamente</string>
    <string name="add_community_error">Não foi possível cadastrar a comunidade</string>
    <string name="login_confirm_email_error">Confirme seu cadastro no email</string>
    <string name="resend_email">Reenviar email</string>
    <string name="withdraw_select_bike_title">Retirada de bicicleta</string>
    <string name="withdraw_confirm">Confirmar</string>
    <string name="withdraw_confirm_title">Confirmar retirada?</string>
    <string name="withdrawal_quiz_destiny_hint">Qual foi o bairro de destino?</string>
    <string name="confirm">Confirmar</string>
    <string name="withdrawal_quiz_trip_reason">Motivo de uso</string>
    <string name="trip_reason_shopping">Fazer compras</string>
    <string name="trip_reason_leisure">Pedalar por lazer</string>
    <string name="trip_reason_to_work">Ir ao trabalho</string>
    <string name="trip_reason_bicycle_as_work">Ferramenta de trabalho</string>
    <string name="trip_reason_other">Outro</string>
    <string name="trip_count_label" formatted="true">Total: %s1 viagens</string>
    <string name="withdrawal_bicycle_rating_great">Ótima</string>
    <string name="withdrawal_bicycle_rating_good">Boa</string>
    <string name="withdrawal_bicycle_rating_regular">Regular</string>
    <string name="withdrawal_bicycle_rating_bad">Ruim</string>
    <string name="withdrawal_bicycle_rating_question">Qual nota você da para a bicicleta?</string>
    <string name="fill_quiz_error">É obrigatório responder o questionário</string>
    <string name="rg_number_hit">Número do RG</string>
    <string name="cpf_number_hint">Número do CPF</string>
    <string name="update_button">Salvar alterações</string>
    <string name="something_happened_error">Ocorreu algum erro</string>
    <string name="operation_success_message">Operação realizada com sucesso</string>
    <string name="bicycle_update_success">Bicicleta atualizada com sucesso</string>
    <string name="bicycle_add_success">Bicicleta adicionada com sucesso</string>
    <string name="bicycle_add_button">Adicionar bicicleta</string>
    <string name="bicycle_update_button">Editar bicicleta</string>
    <string name="bicycle_image_view_descripition">Imagem da bicicleta</string>
    <string name="warning">Atenção</string>
    <string name="id_picture_tip">Tire uma foto que mostre todo o documento e que esteja legível</string>
    <string name="profile_picture">Foto do perfil</string>
    <string name="profile_picture_tip">Tire uma foto dos ombros para cima, estilo 3x4, procure locais claros, se aproxime da pessoa e verifique se é possível identificá-la depois.
    </string>
    <string name="bicycle_serial_number_invalid">Número de série da bicicleta inválido</string>
    <string name="bicycle_serial_number_already_registered">Número de série da bicicleta já cadastrado na comunidade</string>
    <string name="bicycle_name_invalid">Nome da bicicleta inválido</string>
    <string name="bike_serial_number">Número de série da bicicleta</string>
    <string name="bike_name">Nome da bicicleta</string>
    <string name="bicycle_invalid_order_number">Número de ordem inválido</string>
    <string name="order_number">Número de ordem</string>
    <string name="error_registering_bicycle">Falha ao cadastrar a bicicleta</string>
    <string name="error_editing_bicycle">Falha ao editar a bicicleta</string>
    <string name="email_format_warning">Insira um email válido</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_password_confirmation">Confirme a senha</string>
    <string name="prompt_full_name">Nome completo</string>
    <string name="prompt_welcome_title">É bom ver você novamente!</string>
    <string name="prompt_welcome_message">Você já usou o e-mail &lt;b>%s&lt;/b> para fazer login. Insira a senha dessa conta.</string>
    <string name="action_sign_in_or_register">Entrar/Registrar</string>
    <string name="action_next">Próxima</string>
    <string name="action_next_registration">Próximo</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_back">Voltar</string>
    <string name="action_save">Salvar</string>
    <string name="action_register">Cadastrar</string>
    <string name="prompt_password_registration">Senha (min. 6 caracteres)</string>
    <string name="prompt_password_min_length_warning">A senha deve ter no mínimo 6 caracteres</string>
    <string name="prompt_registration_error">Ocorreu um erro. Tente novamente.</string>
    <string name="action_forgotten_password">Problemas com login?</string>
    <string name="prompt_password_recovery_header">Veja como redefinir sua senha nas instruções enviadas para este e-mail.</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="network_error_message">Falha ao se conectar com o servidor, tente novamente.</string>
    <string name="registration_error">Falha no cadastro.</string>
    <string name="registration_success_title">Oba!</string>
    <string name="registration_success_description">Você foi cadastrado com sucesso! Pressione o botão abaixo para realizar o seu primeiro login.</string>
    <string name="login">Login</string>
    <string name="action_sign_in">Entrar</string>
    <string name="password_length_error">Senha precisa ter no mínimo 6 dígitos</string>
    <string name="submit_form_error">Não foi possível executar a ação.</string>
    <string name="sign_in_password_error">Senha incorreta</string>
    <string name="bicycle_serie_number_invalid">Número da bicicleta inválido</string>
    <string name="edit_bicycle_title">Editar Bicicleta</string>
    <string name="reset_password_email_sent">Email de recuperação de senha enviado.</string>
    <string name="reset_password_email_sent_error">Falha ao enviar email, tente novamente.</string>
    <string name="title_bikes">Bicicletas</string>
    <string name="bike_order_with_label">Ordem: %s</string>
    <string name="bike_series_with_label">Série: %s</string>
    <string name="add_photo">Adicionar foto</string>
    <string name="btn_register_bicycle">Cadastrar Bicicleta</string>
    <string name="add_bicycle_title">Cadastrar Bicicleta</string>
    <string name="bike_withdraw_date">Empréstimo em: %s</string>
    <string name="bike_devolution_date">Devolução em: %s</string>
    <string name="bike_series_number">Série: %s</string>
    <string name="bike_order_number">Ordem: %s</string>
    <string name="search_cyclist_name">Procure a ciclista pelo nome…</string>
    <string name="user_form_title">Cadastrar uma nova Usuária</string>
    <string name="user_form_user_name_label">Nome Completo*</string>
    <string name="user_form_user_name_hint">Ex: Roberto Silva Ferreira</string>
    <string name="user_form_user_document_number_label">CPF ou RG</string>
    <string name="user_form_user_document_number_hint">Insira apenas números</string>
    <string name="user_form_user_phone_label">Celular*</string>
    <string name="user_form_user_phone_hint">DDD + Número</string>
    <string name="user_form_user_document_picture_label">Fotos do documento</string>
    <string name="user_form_user_document_picture_front_label">Fotografe a frente do documento</string>
    <string name="user_form_user_document_picture_back_label">Fotografe o verso do documento</string>
    <string name="user_form_user_gender_label">Com qual gênero a pessoa se identifica?*</string>
    <string name="user_form_user_birthday_label">Nascimento*</string>
    <string name="user_form_user_birthday_hint">DD/MM/AAAA</string>
    <string name="user_form_user_income_label">Renda Mensal (em reais)*</string>
    <string name="user_form_user_race_label">Com qual raça a pessoa se identifica?*</string>
    <string name="user_form_user_schooling_label">Até que grau estudou?</string>
    <string name="user_form_user_adrees_label">Endereço completo*</string>
    <string name="user_form_user_adrees_hint">Ex: Rua Marielle Franco, 123</string>
    <string name="user_form_user_others_picture_label">Outros arquivos</string>
    <string name="user_form_user_residence_proof_picture_label">Comprovante de residência (Opcional)</string>
    <string name="user_form_user_perfil_picture_label">Foto de perfil\n (Opcional)</string>
    <string name="user_form_button">Concluir Cadastro</string>
    <string name="user_created_since">Cadastrado desde %s</string>
    <string name="add_user_invalid_name">Nome inválido</string>
    <string name="add_user_invalid_address">Endereço inválido</string>
    <string name="add_user_age">Idade</string>
    <string name="add_user_invalid_age">Idade inválida</string>
    <string name="add_user_income">Renda mensal</string>
    <string name="add_user_invalid_income">Renda inválida</string>
    <string name="add_user_racial">Com qual raça a pessoa se identifica?</string>
    <string name="hint_user_racial">Selecione</string>
    <string name="add_user_invalid_racial">Raça inválida</string>
    <string name="add_user_schooling">Qual o grau de escolaridade?</string>
    <string name="add_user_invalid_schooling">Escolaridade inválida</string>
    <string name="add_user_invalid_information">Informação inválida</string>
    <string name="add_user_quiz_invalid_information">Informação inválida</string>
    <string name="add_user_quiz_invalid_motivation">Motivação inválida</string>
    <string name="add_user_schooling_status">A pessoa concluiu o grau acima?</string>
    <string name="add_user_schooling_status_complete">Sim</string>
    <string name="add_user_schooling_status_incomplete">Não</string>
    <string name="add_user_schooling_status_studying">Cursando</string>
    <string name="add_user_address_hint">Endereço (Rua, número)</string>
    <string name="add_user_doc_number_hint">Número do RG ou CPF</string>
    <string name="add_user_invalid_doc_number">Número do RG ou CPF inválido</string>
    <string name="add_user_doc_number_already_registered">Documento já cadastrado em outro usuário na comunidade</string>
    <string name="default_custom_component_select_hint">Selecionar</string>
</resources>