<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.returnbicycle.RideQuizActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:title="@string/quiz_title"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/dark_gray"
                android:background="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/quizDestination"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/withdrawal_quiz_destiny_hint"/>

            <TextView
                    android:text="@string/withdrawal_bicycle_rating_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/quizDestination"
                    android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/quizDestination" android:textSize="18sp"/>

            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    android:id="@+id/bikeRateGroup">
                <RadioButton
                        android:text="@string/withdrawal_bicycle_rating_great"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/greatCheck"/>
                <RadioButton
                        android:text="@string/withdrawal_bicycle_rating_good"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/goodCheck" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/withdrawal_bicycle_rating_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/regularCheck" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/withdrawal_bicycle_rating_bad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/badCheck" android:layout_weight="1"/>
            </RadioGroup>
            <TextView
                    android:text="@string/withdrawal_quiz_trip_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/bikeRateGroup"
                    app:layout_constraintStart_toStartOf="@+id/bikeRateGroup"
                    android:textSize="18sp"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    android:id="@+id/rideTypeGroup">
                <RadioButton
                        android:text="@string/trip_reason_shopping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/buyCheck" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/trip_reason_to_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/workCheck" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/trip_reason_bicycle_as_work"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/workUseCheck" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/trip_reason_leisure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/recreationCheck"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/trip_reason_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/otherCheck" android:layout_weight="1"/>
            </RadioGroup>

            <Button
                    android:text="@string/confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirmQuizButton" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/rideTypeGroup"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>