<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="app.igormatos.botaprarodar.presentation.user.userform.UserFormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_5">

        <ScrollView
            android:id="@+id/scrollContainerUser"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".presentation.user.userform.UserFormFragment">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:gravity="center"
                    android:text="@string/user_form_title"
                    android:textColor="@color/gray_6"
                    android:textSize="@dimen/text_size_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <app.igormatos.botaprarodar.common.components.CustomEditText
                    android:id="@+id/cet_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/user_form_user_name_hint"
                    android:inputType="textPersonName"
                    android:label="@string/user_form_user_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <app.igormatos.botaprarodar.common.components.CustomEditText
                    android:id="@+id/cet_user_document"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/user_form_user_document_number_hint"
                    android:inputType="textPersonName"
                    android:label="@string/user_form_user_document_number_label"
                    app:layout_constraintEnd_toStartOf="@+id/cet_user_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cet_user_name" />

                <app.igormatos.botaprarodar.common.components.CustomEditText
                    android:id="@+id/cet_user_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:hint="@string/user_form_user_phone_hint"
                    android:inputType="textPersonName"
                    android:label="@string/user_form_user_phone_label"
                    app:layout_constraintBottom_toBottomOf="@+id/cet_user_document"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cet_user_document"
                    app:layout_constraintTop_toTopOf="@+id/cet_user_document" />

                <TextView
                    android:id="@+id/tv_document_label"
                    style="@style/TextLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/user_form_user_document_picture_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cet_user_document" />

                <app.igormatos.botaprarodar.common.components.CustomPicturePick
                    android:id="@+id/cpp_document_front_picture"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:src="@drawable/ic_baseline_add_a_photo"
                    android:text="@string/user_form_user_document_picture_front_label"
                    app:layout_constraintEnd_toStartOf="@+id/cpp_document_back_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_document_label" />

                <app.igormatos.botaprarodar.common.components.CustomPicturePick
                    android:id="@+id/cpp_document_back_picture"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:src="@drawable/ic_baseline_add_a_photo"
                    android:text="@string/user_form_user_document_picture_back_label"
                    app:layout_constraintBottom_toBottomOf="@id/cpp_document_front_picture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cpp_document_front_picture"
                    app:layout_constraintTop_toTopOf="@id/cpp_document_front_picture" />

                <app.igormatos.botaprarodar.common.components.CustomSelectText
                    android:id="@+id/cst_user_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/default_custom_component_select_hint"
                    android:label="@string/user_form_user_age_label"
                    app:layout_constraintEnd_toStartOf="@+id/cst_user_income"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cpp_document_back_picture" />

                <app.igormatos.botaprarodar.common.components.CustomSelectText
                    android:id="@+id/cst_user_income"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:hint="@string/default_custom_component_select_hint"
                    android:label="@string/user_form_user_income_label"
                    app:layout_constraintBottom_toBottomOf="@+id/cst_user_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cst_user_age"
                    app:layout_constraintTop_toTopOf="@+id/cst_user_age" />

                <app.igormatos.botaprarodar.common.components.CustomSelectText
                    android:id="@+id/cst_user_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/default_custom_component_select_hint"
                    android:label="@string/user_form_user_gender_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cst_user_income" />

                <app.igormatos.botaprarodar.common.components.CustomSelectText
                    android:id="@+id/cst_user_race"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/default_custom_component_select_hint"
                    android:label="@string/user_form_user_race_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cst_user_gender" />

                <app.igormatos.botaprarodar.common.components.CustomSelectText
                    android:id="@+id/cst_user_schooling"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/default_custom_component_select_hint"
                    android:label="@string/user_form_user_schooling_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cst_user_race" />

                <app.igormatos.botaprarodar.common.components.CustomEditText
                    android:id="@+id/cet_user_adress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:hint="@string/user_form_user_adrees_hint"
                    android:label="@string/user_form_user_adrees_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cst_user_schooling" />

                <TextView
                    android:id="@+id/tv_other_pictures_label"
                    style="@style/TextLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/user_form_user_others_picture_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cet_user_adress" />

                <app.igormatos.botaprarodar.common.components.CustomPicturePick
                    android:id="@+id/cpp_residence_proof_picture"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginHorizontal="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_small"
                    android:src="@drawable/ic_baseline_add_a_photo"
                    android:text="@string/user_form_user_residence_proof_picture_label"
                    app:layout_constraintEnd_toStartOf="@+id/cpp_perfil_picture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_other_pictures_label" />

                <app.igormatos.botaprarodar.common.components.CustomPicturePick
                    android:id="@+id/cpp_perfil_picture"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:src="@drawable/ic_baseline_add_a_photo"
                    android:text="@string/user_form_user_perfil_picture_label"
                    app:layout_constraintBottom_toBottomOf="@id/cpp_residence_proof_picture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cpp_residence_proof_picture"
                    app:layout_constraintTop_toTopOf="@id/cpp_residence_proof_picture" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/user_form_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cpp_residence_proof_picture"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>